test/libsolidity/syntaxTests/nameAndTypeResolution/experimental_pragma_duplicate.sol
pragma experimental __test;
pragma experimental __test;
// ----
// Warning: (0-27): Experimental features are turned on. Do not use experimental features on live deployments.
// SyntaxError: (28-55): Duplicate experimental feature name.
